kubernetes/Deployment.auth-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
        - name: auth-server
          image: docker.io/vskurikhin/auth:latest
          ports:
            - containerPort: 8089
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
          volumeMounts:
            - name: config
              mountPath: /app/.auth-server.yaml
              subPath: .auth-server.yaml
      volumes:
        - name: config
          configMap:
            name: auth-server-config
---
apiVersion: v1
kind: Service
metadata:
  name: auth-server
spec:
  selector:
    app: auth-server
  ports:
    - port: 8089
      targetPort: 8089
  type: ClusterIP
