kubernetes/Deployment.core-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-server
  labels:
    app: core-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: core-server
  template:
    metadata:
      labels:
        app: core-server
    spec:
      containers:
        - name: core-server
          image: docker.io/vskurikhin/core:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8082
              protocol: TCP
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1500m"
              memory: "1537Mi"
          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: core-server
spec:
  selector:
    app: core-server
  ports:
    - name: http
      port: 8082
      targetPort: 8082
  type: ClusterIP
