kubernetes/Ingress.app-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-server-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - '<change-me-db-fqdn>'
      secretName: rune-tls
  rules:
    - host: <change-me-db-fqdn>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-server
                port:
                  number: 80
  tls:
    - hosts:
        - <change-me-db-fqdn>
      secretName: rune-tls
